--- a/pms.app/Components/Pages/Home.razor
+++ b/pms.app/Components/Pages/Home.razor
@@ -1,5 +1,6 @@
-﻿@page "/"
-
+﻿@using Microsoft.AspNetCore.Authorization
+@page "/"
+@attribute [Authorize]
 <PageTitle>Home</PageTitle>
 
 <h1>Hello, world!</h1>
