--- a/pms.app/Components/Pages/CategoryPages/Details.razor
+++ b/pms.app/Components/Pages/CategoryPages/Details.razor
@@ -1,9 +1,11 @@
 ﻿@page "/categories/details"
-@inject NavigationManager NavigationManager
+
 @using Microsoft.EntityFrameworkCore
+@using System.Linq.Expressions;
+@using pms.app.Models
 
 @inject UnitOfWork.IUnitOfWork unitOfWork
-@using pms.app.Models
+@inject NavigationManager NavigationManager
 
 <PageTitle>Details</PageTitle>
 
@@ -26,6 +28,23 @@
             <dd class="col-sm-10">@category.Created</dd>
             <dt class="col-sm-2">Updated</dt>
             <dd class="col-sm-10">@category.Updated</dd>
+
+            <hr />
+            <h5>Items with this Category</h5>
+            <hr />
+            @if (category.Items != null && category.Items.Any())
+            {
+                <ul>
+                    @foreach (var item in category.Items)
+                    {
+                        <li>@item.Name</li>
+                    }
+                </ul>
+            }
+            else
+            {
+                <p>No items assigned to this category.</p>
+            }
         </dl>
         <div>
             <a href="@($"/categories/edit?id={category.Id}")">Edit</a> |
@@ -42,7 +61,28 @@
 
     protected override async Task OnInitializedAsync()
     {
-        category = await unitOfWork.GetRepository<Category>().GetByIdAsync(Id);
+
+        // Set up filter
+        Expression<Func<Category, bool>> filter =  i => i.Id == Id;
+
+        Func<IQueryable<Category>, IOrderedQueryable<Category>> orderBy = q => q.OrderByDescending(i => i.Created).ThenByDescending(i => i.Updated.HasValue ? i.Updated : DateTime.MinValue);
+
+        // Set up includeProperties
+        string includeProperties = "Items";
+
+        // Set up pagination
+        int page = 1;
+        int pageSize = 30;
+
+        var categories = await unitOfWork.GetRepository<Category>().GetAllAsync(
+            filter,
+            orderBy,
+            includeProperties,
+            page,
+            pageSize
+            );
+
+        category = categories.FirstOrDefault();
 
         if (category is null)
         {
