--- a/pms.app/Components/Pages/CustomerPages/Details.razor
+++ b/pms.app/Components/Pages/CustomerPages/Details.razor
@@ -1,6 +1,7 @@
 ﻿@page "/customers/details"
 @using Microsoft.EntityFrameworkCore
 @using System.Linq.Expressions;
+@using System.Globalization
 @using pms.app.Models
 
 @inject UnitOfWork.IUnitOfWork unitOfWork
@@ -36,36 +37,41 @@
             <dt class="col-sm-2">Updated</dt>
             <dd class="col-sm-10">@customer.Updated</dd>
         </dl>
-
+        @if (customer.CustomerItems.Any())
+        {
         <h5>Customer Items</h5>
         <table class="table">
             <thead>
                 <tr>
                     <th>Number (SKU)</th>
                     <th>Name</th>
-                    <th>Price</th>             
+                    <th>Price</th>
+                    <th>Status</th>
+                    <th>Date Assinged</th>
                 </tr>
             </thead>
             <tbody>
-                @if (customer.CustomerItems.Any())
-                {
+
                     @foreach (var customerItem in customer.CustomerItems)
                     {
                         <tr>
                             <td>@customerItem.Item.SKU</td>
                             <td>@customerItem.Item.Name</td>
-                            <td>@customerItem.Item.Price</td>
+                            <td>@customerItem.Item.Price.ToString("C", CultureInfo.CurrentCulture)</td>
+                            <td>@customerItem.Item.Status</td>
+                            <td>@customerItem.AssignedDate</td>                          
                         </tr>
                     }
-                }
-                else
-                {
-                    <tr>
-                        <td colspan="2">No items assigned to this customer.</td>
-                    </tr>
-                }
+
             </tbody>
         </table>
+        }
+        else
+        {
+            <tr>
+                <td colspan="2">No items assigned to this customer.</td>
+            </tr>
+        }
 
         <div>
             <a href="@($"/customers/edit?id={customer.Id}")">Edit</a> |
