--- a/pms.app/Components/Pages/ItemPages/Details.razor
+++ b/pms.app/Components/Pages/ItemPages/Details.razor
@@ -3,6 +3,8 @@
 @using Microsoft.EntityFrameworkCore;
 @using System.Linq.Expressions;
 @using pms.app.Models
+@using System.Globalization
+
 @inject UnitOfWork.IUnitOfWork unitOfWork
 @inject NavigationManager NavigationManager
 
@@ -17,7 +19,8 @@
     {
         <p><em>Loading...</em></p>
     }
-    else {
+    else
+    {
         <dl class="row">
             <dt class="col-sm-2">Item Number (SKU)</dt>
             <dd class="col-sm-10">@item.SKU</dd>
@@ -26,14 +29,12 @@
             <dt class="col-sm-2">Description</dt>
             <dd class="col-sm-10">@item.Description</dd>
             <dt class="col-sm-2">Price</dt>
-            <dd class="col-sm-10">@item.Price</dd>
+            <dd class="col-sm-10">@item.Price.ToString("C", CultureInfo.CurrentCulture)</dd>
             <dt class="col-sm-2">Status</dt>
             <dd class="col-sm-10">@item.Status</dd>
 
             @if (item.Category != null)
             {
-                <dt class="col-sm-2">CategoryId</dt>
-                <dd class="col-sm-10">@item.CategoryId</dd>
                 <dt class="col-sm-2">Category Name </dt>
                 <dd class="col-sm-10">@item.Category.Name</dd>
             }
@@ -42,6 +43,36 @@
             <dt class="col-sm-2">Updated</dt>
             <dd class="col-sm-10">@item.Updated</dd>
         </dl>
+
+        @if (item.CustomerItems.Any())
+        {
+            <h5>Item Customers</h5>
+            <table class="table">
+                <thead>
+                    <tr>
+                        <th>Customer Name</th>
+                        <th>Address</th>
+                        <th>City</th>
+                        <th>Email</th>
+                        <th>Date Assinged</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    @foreach (var customerItem in item.CustomerItems)
+                    {
+                        <tr>
+                            <td>@customerItem.Customer.Name</td>
+                            <td>@customerItem.Customer.Address</td>
+                            <td>@customerItem.Customer.City</td>
+                            <td>@customerItem.Customer.Email</td>
+                            <td>@customerItem.AssignedDate</td>
+                        </tr>
+                    }
+                </tbody>
+            </table>
+        }
+
+
         <div>
             <a href="@($"/items/edit?id={item.Id}")">Edit</a> |
             <a href="@($"/items")">Back to List</a>
@@ -63,7 +94,7 @@
         Func<IQueryable<Item>, IOrderedQueryable<Item>> orderBy = null;
 
         // Set up includeProperties
-        string includeProperties = "Category";
+        string includeProperties = "Category,CustomerItems,CustomerItems.Customer";
 
         // Set up pagination
         int page = 1;
